@@ -1,3 +1,12 @@
 from zope.i18nmessageid import MessageFactory
 
 _ = MessageFactory('ftw.globalstatusmessage')
+
+
+def initialize(context):
+    """Initializer called when used as a Zope 2 product.
+
+    This is referenced from configure.zcml. Regstrations as a "Zope 2 product"
+    is necessary for GenericSetup profiles to work, for example.
+
+    """
