@@ -1,0 +1,3 @@
+<layers>
+    <layer name="ftw.globalstatusmessage" remove="True" />
+</layers>
