@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<rolemap>
+    <permissions>
+        <permission name="ftw.globalstatusmessage: Edit message" acquire="True">
+        </permission>
+    </permissions>
+</rolemap>
